@@ -54,6 +54,9 @@ install: build install-docs Build/InstallDesktopFile
 test: git-annex
 	./git-annex test
 
+retest: git-annex
+	./git-annex test --rerun-update --rerun-filter failures
+
 # hothasktags chokes on some template haskell etc, so ignore errors
 tags:
 	find . | grep -v /.git/ | grep -v /tmp/ | grep -v /dist/ | grep -v /doc/ | egrep '\.hs$$' | xargs hothasktags > tags 2>/dev/null
@@ -80,7 +83,7 @@ clean:
 		doc/.ikiwiki html dist tags Build/SysConfig.hs build-stamp \
 		Setup Build/InstallDesktopFile Build/EvilSplicer \
 		Build/Standalone Build/OSXMkLibs Build/LinuxMkLibs Build/DistributionUpdate \
-		git-union-merge
+		git-union-merge .tasty-rerun-log
 	find . -name \*.o -exec rm {} \;
 	find . -name \*.hi -exec rm {} \;
 
